--- a/firefox_ext/manifest.json
+++ b/firefox_ext/manifest.json
@@ -3,19 +3,25 @@
   "name": "Input Reader",
   "version": "1.0",
   "description": "Reads all input elements on a page and displays their id, type, and placeholder",
-  
-  "permissions": [
-    "activeTab",
-    "storage"
-  ],
-  
+
+  "permissions": ["activeTab", "storage"],
+
   "browser_action": {
     "default_icon": "icon.png",
     "default_title": "Read Inputs",
     "default_popup": "popup.html"
   },
-  
+
   "icons": {
     "48": "icon.png"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "MohamadAlghish1993@gmail.com",
+      "strict_min_version": "128.0",
+      "data_collection_permissions": {
+        "required": ["none"]
+      }
+    }
   }
 }
